--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.singleCard {
+border: 1px solid black;
+padding: 16px;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: start;
+gap:16px;
+}
+.pic {
+width: 216px;
+height: 216px;
+object-fit: cover;
+}
+.objData{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-around;
+  gap: 16px;
+}
+
